# StrokeRenderingXMU

./: .gitignore  CMakeLists.txt  Main.cpp  Readme.md  dash.geom  dash.tesc  dash.tese  dash_parallel.geom  dash_parallel.tesc  dash_parallel.tese  geometry.geom  linear.frag  linear.vert  quadratic.frag  quadratic.geom  quadratic.tesc  quadratic.tese  quadratic_texture.frag  quadratic_texture.geom  quadratic_texture.tesc  quadratic_texture.tese  shaderClass.cpp  shaderClass.h  tesellationTest.vcxproj  tesellationTest.vcxproj.filters  tessellationTest.sln
Libraries/include/glad/: glad.h
Libraries/src/: glad.c
assets/pictures/: picsHolder.pptx
assets/slides/: GPU-Accelerated Rendering of Vector Strokes with Piecewise Quadratic Approximation.pptx
include/: VBO.h  shaderClass.h
shaders/: dash_parallel.geom  dash_parallel.tesc  dash_parallel.tese  quadratic.frag  quadratic.geom  quadratic.tesc  quadratic.tese  quadratic.vert  quadratic_texture.frag  quadratic_texture.geom  quadratic_texture.tesc
src/: Main.cpp  VBO.cpp  shaderClass.cpp
tessellationTest/x64/Debug/: tessellationTest.exe.recipe  vc143.idb
tessellationTest/x64/Debug/tessellationTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  tessellationTest.lastbuildstate
